turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:19: error: type mismatch;
 found   : Array[Int]
 required: Int
  setCouleurBrosse(colors(rule(etat)(couleur_actuelle)))
                                    ^